# autoresearch-preflight-intent-governor

./: Makefile  README.md  autoresearch_preflight_intent_governor.ipynb  pyproject.toml
.github/workflows/: tests.yml
demo_tmp/: preflight_history.jsonl
scripts/: demo_preflight_governor.py
src/preflight_intent_governor/: __init__.py  guard.py  heuristics.py  history.py  hooks.py  normalize.py
tests/: test_guard_decision.py  test_guard_drift.py  test_guard_repeated_failures.py  test_heuristics.py  test_history_io.py  test_history_queries.py  test_history_record.py  test_hooks_integration.py  test_normalize_block_id.py  test_normalize_numeric.py  test_normalize_params.py  test_normalize_shape.py
